--- a/index.html
+++ b/index.html
@@ -358,16 +358,18 @@
           <td>É uma linguagem de programação de alto nível orientada a objetos <br>utilizada para criar interatividade em páginas web</td>
         </tr>
     </table>
+
+    <br><br><br><br>
+
     </div>
       </div>
 
       <br><br><br><br><br><br><br>
 
     <div class="tecnologia">
-        
       <div class="retangulo1">
         <div class="conteudo1">
-          <p>HTML</p>
+          <p>HTML<br><br>Utilizado no <br>Website</p>
         </div>
         <div class="conteudo-novo1">
           <p>HyperText Markup Language<br><br>
@@ -381,7 +383,7 @@
 
       <div class="retangulo2">
         <div class="conteudo2">
-          <p>CSS</p>
+          <p>CSS<br><br>Utilizado no <br>Website</p>
         </div>
         <div class="conteudo-novo2">
           <p>Cascading Style Sheets<br><br>
@@ -393,7 +395,7 @@
 
       <div class="retangulo3">
         <div class="conteudo3">
-          <p>JavaScript</p>
+          <p>JavaScript<br><br>Utilizado no <br>Website</p>
         </div>
         <div class="conteudo-novo3">
           <p>JavaScript<br><br>
